fixed issue with footer bar on contact page not reaching bottom. Extended size of spacing div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ body {
 
 .spacing1 {
     width: 100%;
-    height: 4rem;
+    height: 10rem;
     opacity: 0.0;
 }
 
